Update navigation button labels in index.html

--- a/index.html
+++ b/index.html
@@ -358,12 +358,10 @@
 
     <div class="nav-tabs-container">
         <nav class="nav-tabs">
-            <button class="nav-button active" data-target="agent-page"><i class="fas fa-robot"></i> AEO Agent</button>
-            <button class="nav-button" data-target="topics-page"><i class="fas fa-th-large"></i> Main Focus Areas</button>
+            <button class="nav-button active" data-target="agent-page"><i class="fas fa-robot"></i> AEO Agents</button>
+            <button class="nav-button" data-target="topics-page"><i class="fas fa-th-large"></i> Focus Areas</button>
             <button class="nav-button" data-target="agenda-page"><i class="fas fa-calendar-alt"></i> Agenda</button>
             <button class="nav-button" data-target="tools-page"><i class="fas fa-cogs"></i> AI Tools</button>
-            <button class="nav-button" data-target="compose-page"><i class="fas fa-pen-alt"></i> Compose</button>
-            <button class="nav-button" data-target="templates-page"><i class="fas fa-file-alt"></i> Templates</button>
         </nav>
     </div>
 
