--- a/index.html
+++ b/index.html
@@ -395,17 +395,17 @@
 
         <section class="summary-section">
             <div class="summary-header">
-                <h3>Context & Details</h3>
+                <h3>Today's Agenda</h3>
                 <button><i class="fas fa-copy" style="margin-right: 5px;"></i>Copy</button>
             </div>
             <div class="summary-content" id="summary-content">
-                 <h4>Next Up: Milestone - Non-Profit Portal Launch</h4>
-                <p>The official launch of the new national portal for non-profit organizations is scheduled for the end of today. Key preparation items include final review of launch communications and coordination with the media team.</p>
-                <ul>
-                    <li><strong>Action Item:</strong> Review and approve the final press release draft.</li>
-                    <li><strong>Check Point:</strong> Confirm that the technical team has completed all pre-launch system checks.</li>
-                </ul>
-            </div>
+                        <h4>Next Up: Social Development Fund Update</h4>
+                        <p>Meeting to review the performance of initiatives funded by the Social Development Fund.</p>
+                        <div class="key-topics-pills">
+                            <div class="key-topic-pill" data-topic="Launch Strategy">Launch Strategy</div>
+                            <div class="key-topic-pill" data-topic="Media Coordination">Media Coordination</div>
+                        </div>
+                    <h4>Later Today</h4><p><strong>Milestone: Non-Profit Portal Launch</strong> (End of Day)</p><p><strong>Milestone: Non-Profit Portal Launch</strong> (EOD)</p></div>
         </section>
     </main>
     
