--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@
             
             // --- Gemini API Call ---
             async function sendMessageToGemini(message) {
-                 const apiKey = ""; // Keep this empty.
+                 const apiKey = "AIzaSyAJGvnZX6uuTlAnf_m0hCQFJ3knsJRnGIU"; // Keep this empty.
                  const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${apiKey}`;
                 
                 const agendaContext = `Current Agenda for the week of Oct 20, 2025:
