--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         /* --- Modal Styles --- */
         .modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.7); justify-content: center; align-items: center; animation: fadeIn 0.3s; }
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-        .modal-content { background: var(--container-bg); border: 1px solid var(--border-color); backdrop-filter: blur(20px); padding: 30px; border-radius: 15px; width: 650px; max-width: 90%; text-align: left; position: relative; animation: slideIn 0.3s; }
+        .modal-content { background: var(--container-bg); border: 1px solid var(--border-color); backdrop-filter: blur(20px); padding: 30px; border-radius: 15px; width: 650px; max-width: 90%; text-align: left; position: relative; animation: slideIn 0.3s; max-height: 65vh; overflow-y: auto; }
         @keyframes slideIn { from { transform: translateY(-30px); opacity: 0; } to { transform: translateY(0); opacity: 1; } }
         .close-button { color: #aaa; position: absolute; top: 10px; right: 20px; font-size: 28px; font-weight: bold; cursor: pointer; }
         .close-button:hover { color: #fff; }
