--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             display: flex;
             flex-direction: column;
             min-height: 100vh;
+            min-height: calc(var(--vh, 1vh) * 100);
         }
         
         body::before {
@@ -1011,6 +1012,15 @@
                     }
                 }
             }
+            
+             // Mobile Viewport Height fix
+            function setViewportHeight() {
+                let vh = window.innerHeight * 0.01;
+                document.documentElement.style.setProperty('--vh', `${vh}px`);
+            }
+            window.addEventListener('resize', setViewportHeight);
+            setViewportHeight(); // Initial call
+
 
             // --- Event Listeners ---
             changePersonaBtn?.addEventListener('click', () => openModal(personaModal));
