--- a/index.html
+++ b/index.html
@@ -478,11 +478,16 @@
             #mobile-month-grid .day-cell { 
                 position: relative;
                 text-align: center;
-                padding: 6px 0;
                 cursor: pointer;
                 border-radius: 50%;
                 font-size: 0.85rem;
                 box-sizing: border-box;
+                aspect-ratio: 1 / 1;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin: 2px auto;
+                max-width: 45px;
             }
             
             #mobile-month-grid .day-cell.selected { 
