--- a/index.html
+++ b/index.html
@@ -2364,13 +2364,13 @@
     <!-- Header -->
     <header class="header">
         <div class="header-left">
-            <img src="./HRSD AI Executive Office 0808_files/logo_en.svg" alt="HRSD Logo" class="hrsd-logo">
+            <img src="https://www.hrsd.gov.sa/themes/custom/hrsd_saud/logo_en.svg" alt="HRSD Logo" class="hrsd-logo">
             <span>| AI Executive Office</span>
         </div>
         <div class="header-right">
             <div class="user-profile">
                 <span class="welcome-text">Welcome Ahmad</span>
-                <img src="./HRSD AI Executive Office 0808_files/ffffff" alt="User Avatar">
+                <img src="https://placehold.co/40x40/00A99D/ffffff?text=A" alt="User Avatar">
             </div>
             <button class="mobile-menu-btn"><i class="fas fa-bars"></i></button>
         </div>
